[package]
name = "gitguard"
version = "1.0.0"
authors = ["1ntegrxl"]
edition = "2021"
description = "An OPSEC-oriented tool to scan and fix Git username and email leaks"
license = "MIT"
repository = "https://github.com/1ntegrxl/gitguard"
keywords = ["opsec", "osint", "git", "redteam"]
categories = ["command-line-utilities", "security"]
readme = "README.md"

[[bin]]
name = "gitguard"
path = "src/main.rs"

[dependencies]
clap = "4.0.0" 
tokio = { version = "1", features = ["full"] }
prettytable = "0.10.0"
termcolor = "1.1"
crossterm = "0.28.1"
tempfile = "3.5"
